--- a/bloc/WebContent/css/estilo.css
+++ b/bloc/WebContent/css/estilo.css
@@ -127,32 +127,32 @@ text-align: center;}
 	list-style: none;
 }
 
-#formcrear {
+#formcrear, #formeditar{
 	border: 2px solid #a55;
 	color: #a55;
 	background-color: white;
 }
 
-#formcrear form {
+#formcrear #formeditar form {
 	padding-top: 4%;
 	width: 75%;
 	margin-left: auto;
 	margin-right: auto;
 }
 
-#formcrear label {
+#formcrear #formeditar label {
 	display: block;
 	text-align: left;
 	font-weight: bold;
 	margin-top: 10px;
 }
 
-#formcrear input[type="text"] {
+#formcrear #formeditar  input[type="text"] {
 	height: 20px;
 	width: 100%;
 }
 
-#formcrear .boton {
+#formcrear #formeditar .boton {
 	font-weight: bold;
 	margin: 10px;
 	padding: 10px;
@@ -226,6 +226,14 @@ text-align: center;}
   user-select: none;
 	
 }
-
+#editar {
+	clear: both;
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	padding-top: 4%;
+	width: 75%;
+	
+}
 
 
